# kernel_common_drivers

./: .gitignore  BUILD.bazel  Kconfig.ext  amlogic.bzl  amlogic_utils.bzl  amlogic_utils.sh  build.config.amlogic  build.config.amlogic.bazel  build.config.amlogic.fragment.bazel  build.config.amlogic32  manifest.xml  mk.sh  modules.bzl  user.bazelrc
drivers/amfc/: BUILD.bazel  Kconfig  Makefile  amfc.c  amfc_f2fs_hook.c  decompress_amfc.c
drivers/amfc/aml_erofs/: Kconfig  Makefile  compress.h  data.c  decompressor.c  decompressor_cryptor.c  decompressor_deflate.c  decompressor_lzma.c  decompressor_zstd.c  dir.c  erofs_fs.h  fileio.c  fscache.c  inode.c  internal.h  namei.c  super.c  sysfs.c  tags  utils.c  xattr.c  xattr.h  zdata.c  zmap.c  zutil.c
drivers/amfc/aml_f2fs/: Kconfig  Makefile  acl.c  acl.h  cfi_ignore.txt  checkpoint.c  compress.c  data.c  debug.c  dir.c  extent_cache.c  f2fs.h  file.c  gc.c  hash.c  inline.c  inode.c  iostat.c  iostat.h  namei.c  node.c  node.h  recovery.c  segment.c  segment.h  shrinker.c  super.c  sysfs.c  verity.c  xattr.c  xattr.h
drivers/amfc/aml_zram/: Kconfig  Makefile  backend_amfc.c  backend_amfc.h  backend_lz4.c  backend_lz4.h  backend_lzo.c  backend_lzo.h  backend_lzorle.c  backend_lzorle.h  zcomp.c  zcomp.h  zram_drv.c  zram_drv.h
drivers/amfc/sym_helper/: Kconfig  Makefile  symbols.c
drivers/amfc/zstd_tool/: benchzstd.c  benchzstd.h  datagen.c  dibio.c  dibio.h  fileio.c  fileio.h  util.h  zstdcli.c  zstdcli_trace.c
drivers/aml_tee/: BUILD.bazel  Kconfig  tee_core.c  tee_data_pipe.c  tee_data_pipe.h  tee_shm.c
drivers/aml_tee/optee/: call.c  core.c  device.c  ffa_abi.c  log.c  log.h  notif.c  optee_private.h  optee_smc.h  optee_trace.h  rpc.c  smc_abi.c  supp.c
drivers/aml_watermark/: BUILD.bazel  Kconfig  Makefile  watermark.c  wm_smc_cmd.h
drivers/cpu_info/: BUILD.bazel  Kconfig  Makefile  cpu_info.c
drivers/cpufreq/: BUILD.bazel  Makefile  aml_cpufreq.c  aml_cpufreq.h  aml_cpufreq_v2.c  meson-cpufreq.c
drivers/crypto/: BUILD.bazel  aml-aes-dma.c  aml-crypto-device.c  aml-crypto-dma.c  aml-crypto-dma.h  aml-dma.c  aml-sha-dma.c  aml-sha3-dma.c  aml-sm4-dma.c  aml-tdes-dma.c
drivers/debug/: BUILD.bazel  Kconfig  Makefile  aml_aocpu_monitor.c  aml_iotm.c  aml_iotrace.c  atrace.c  atrace_mem.c  audio_utils.c  cpu_mhz.c  debug_file.c  debug_mte.c  debug_test.c  ftrace_ramoops.c  gki_config.c  iotm_hw.h  iotm_v1.c  iotm_v2.c  isolcpus.c  kprobes.c  lockup.c  lockup.h  main.c  main.h  printk.c  ring_buffer.c  ring_buffer.h  sched.c  uboot_log.c  watchdog_hld.c
drivers/drm/: BUILD.bazel  Kconfig  Makefile  meson_async_atomic.c  meson_async_atomic.h  meson_atomic.c  meson_crtc.c  meson_crtc.h  meson_cvbs.c  meson_cvbs.h  meson_debugfs.c  meson_dptx.c  meson_dptx.h  meson_drm_bind.c  meson_drm_main.c  meson_drm_main.h  meson_drm_rdma.c  meson_drm_rdma.h  meson_drv.c  meson_drv.h  meson_dummy.c  meson_dummy.h  meson_dummyl.c  meson_dummyl.h  meson_dummyp.c  meson_dummyp.h  meson_eDP.c  meson_eDP.h  meson_edp_modern.c  meson_fb.c  meson_fbdev.c  meson_fbdev.h  meson_gem.c  meson_gem.h  meson_hdmi.c  meson_hdmi.h  meson_hdmi_modern.c  meson_hdmi_modern.h  meson_hdmitx_diag.c  meson_hdmitx_diag_modern.c  (+27 more)
drivers/drm/vpu-hw/: meson_osd_afbc.c  meson_osd_afbc.h  meson_osd_csc.c  meson_osd_csc.h  meson_osd_gfcd.c  meson_osd_gfcd.h  meson_osd_proc.c  meson_osd_scaler.c  meson_osd_scaler.h  meson_vpu_hdr_dv.c  meson_vpu_hdr_dv.h  meson_vpu_osd_mif.c  meson_vpu_osd_mif.h  meson_vpu_osdblend.c  meson_vpu_osdblend.h  meson_vpu_postblend.c  meson_vpu_postblend.h  meson_vpu_reg.h  meson_vpu_video_wrapper.c
drivers/dvb/: BUILD.bazel  Kconfig  Makefile  aml_demod_common.c  aml_dtvdemod.c  aml_dvb_extern_driver.c  aml_dvb_extern_driver.h  aml_dvb_extern_i2c.c  aml_dvb_extern_i2c.h  aml_tuner.c  aml_tuner_ops.c
drivers/dvb/aucpu/: aml_aucpu.c
drivers/dvb/demux/: BUILD.bazel  Makefile  aml_dmx.c  aml_dmx.h  aml_dsc.c  aml_dsc.h  aml_dvb.c  aml_dvb.h
drivers/dvb/dsm/: aml_dsm.c
drivers/dvb/dummy_fe/: BUILD.bazel  Makefile  dummy_fe_wrapper.h  dvb_dummy_fe.c
drivers/dvb/smartcard/: smartcard.c
drivers/dvb/smartcard_sc2/: Kconfig  smartcard.c
drivers/dvb_ci/: BUILD.bazel  Makefile  aml_ci.c  aml_ci.h  aml_ci_bus.c  aml_ci_bus.h  aml_pcmcia.c  aml_pcmcia.h
drivers/dvb_ci/cimax/: dvb_ringbuffer.c
drivers/dvb_usbci/: BUILD.bazel  usb_ci.h  usbci.c  usbci.h
drivers/efuse_unifykey/: BUILD.bazel  defendkey.c  efuse.c  efuse.h  efuse_api.c  efuse_burn.c  normal_key.c  securekey.c  security_key.c  storage_key.c  unifykey.c  unifykey.h  unifykey_dts.c
drivers/gki_tool/: BUILD.bazel  Kconfig  Makefile  class_debug.c  gki_module.c  gki_tool.c  gki_tool.h
drivers/gpio/: BUILD.bazel  Kconfig  Makefile  gpiolib-sysfs.c  gpiolib.c
drivers/gpio/pinctrl/: Kconfig  (+15 more)
drivers/host/: BUILD.bazel  Makefile  host.c  host.h  host_poll.c  host_report.c  host_report.h  sysfs.c
drivers/hwspinlock/: BUILD.bazel  Kconfig  hwspinlock.c  hwspinlock_bakery.c  hwspinlock_internal.h
drivers/input/: BUILD.bazel  Kconfig  Makefile  main.c  main.h
drivers/irblaster/: BUILD.bazel  irblaster-meson.c  sysfs.c
drivers/jtag/: BUILD.bazel  meson_jtag.c
drivers/led/: BUILD.bazel  Kconfig  Makefile  aml-pca9557.c  fd650.c  leds-aw9523b.c  leds-tlc59116.c  leds_state.c  main.c  main.h  meson_led_unipolar_ctrl.c
drivers/mailbox/: BUILD.bazel  meson_mbox_comm.h  meson_mbox_devfs.c  meson_mbox_fifo.c  meson_mbox_fifo.h  meson_mbox_pl.h  meson_mbox_pl_v0.c  meson_mbox_pl_v1.c  meson_mbox_pl_v2.c  meson_mbox_sec.c
drivers/media/: BUILD.bazel  Kconfig  Makefile  media_main.c  media_main.h
drivers/memory_debug/: BUILD.bazel  Kconfig  Makefile  main.c  main.h
drivers/memory_ext/: BUILD.bazel  Kconfig  Makefile  aml_cma.c  aml_smmu.c  dma_pcie_mapping.c  mem_debug.c  memory.c  mix_zram.c  page_trace.c  pin_file.c  slab_trace.c  user_fault.c  vmap_stack.c  watch_point.c
drivers/net/: BUILD.bazel
drivers/pm/: BUILD.bazel  Makefile  gx_pm.c  reboot.c
drivers/power/: BUILD.bazel  Kconfig  Makefile  main.c  sec_power_domain.c  sec_pwr_ctrl.c
(+4133 files in other folders)
