load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:project/project.bzl", "COMMON_DRIVERS_KCONFIG_AND_MAKEFILE")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

config_setting(
    name = "common_drivers_on_top_dir",
    flag_values = {":common_drivers_on_top": "True"},
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "common_drivers_on_top",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

ddk_headers(
    name = "soc_headers",
    hdrs = glob([
        "include/**/*.h",
    ]),
    linux_includes = [
        "include",
        "include/uapi",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["build.config.amlogic.fragment.bazel"])
exports_files(["build.config.amlogic.bazel"])
exports_files(["Kconfig.ext"])
exports_files(["project/build.config.project"])
exports_files(["build.config.amlogic"])
exports_files(["arch/arm64/configs/amlogic_gki.fragment"])

filegroup(
    name = "amlogic_build_config_fragment",
    srcs = ["build.config.amlogic.fragment.bazel"],
)

filegroup(
    name = "common_drivers_sources",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "BUILD.bazel",
            "*.bzl",
            ".git/**",
            "customer/**",
            "rootfs_base.cpio.gz.uboot",
        ],
    ) + COMMON_DRIVERS_KCONFIG_AND_MAKEFILE,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "amlogic_sources",
    srcs = [
        ":common_drivers_sources",
        "//common:kernel_aarch64_sources",
    ],
)

COMMON_DRIVERS_DIR = "common_drivers"
load("//common_drivers:amlogic.bzl", "define_amlogic")
define_amlogic()

