. ${ROOT_DIR}/${KERNEL_DIR}/build.config.constants

COMMON_DRIVERS_DIR=../common_drivers
. ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/project/build.config.project

[[ -n ${KASAN} ]] && LTO=none

echo "Base Kernel parm: LTO=${LTO} GKI_CONFIG=${GKI_CONFIG} ANDROID_PROJECT=${ANDROID_PROJECT} FATLOAD=${FATLOAD} KASAN=${KASAN} CHECK_GKI_20=${CHECK_GKI_20}"

FRAGMENT_CONFIG=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.fragment
FRAGMENT_CONFIG_GKI10=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.10
FRAGMENT_CONFIG_DEBUG=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.debug
FRAGMENT_CONFIG_NOGKI=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_gki.nogki
FRAGMENT_CONFIG_UPGRADE=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade.defconfig
FRAGMENT_CONFIG_UPGRADE_P=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_upgrade_p.defconfig
FRAGMENT_CONFIG_KASAN=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/amlogic_kasan.defconfig

function post_defconfig_cmds() {
	MERGE_CONFIG_SCRIPT_PATH=${ROOT_DIR}/${KERNEL_DIR}/scripts/kconfig
	local temp_file=`mktemp .tmp.config.XXXXXXXXXXXX`
	ARM64_DEFCONFIG=${OUT_DIR}/.config
	KCONFIG_DEFCONFIG=${ARM64_DEFCONFIG}.tmp

	if [[ ${GKI_CONFIG} == gki_20 ]]; then
		if [[ -z ${ANDROID_PROJECT} || -n ${FATLOAD} ]]; then
			echo "CONFIG_AMLOGIC_DRIVER=y" > ${temp_file}
			echo "CONFIG_AMLOGIC_MODIFY=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_IN_KERNEL_MODULES=y" >> ${temp_file}
			if [[ -n ${DDK_BUILD} ]]; then
				echo "CONFIG_AMLOGIC_DDK_BUILD=y" >> ${temp_file}
			fi

			echo "CONFIG_AMLOGIC_SERIAL_MESON=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_SERIAL_MESON_CONSOLE=y" >> ${temp_file}
			echo "CONFIG_AMLOGIC_SERIAL_EARLY_CONSOLE=y" >> ${temp_file}
			echo "CONFIG_DEVTMPFS=y" >> ${temp_file}
		fi
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
				${ARM64_DEFCONFIG} ${temp_file}
	else
		echo "CONFIG_MODULE_SIG_ALL=y" > ${temp_file}
		if [[ -z ${ANDROID_PROJECT} || -n ${FATLOAD} ]]; then
			echo "CONFIG_AMLOGIC_SERIAL_MESON=y" >> ${temp_file}
			echo "CONFIG_DEVTMPFS=y" >> ${temp_file}
		fi

		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
				${ARM64_DEFCONFIG} ${FRAGMENT_CONFIG} ${FRAGMENT_CONFIG_GKI10} \
				${FRAGMENT_CONFIG_DEBUG} ${temp_file}

		if [[ -z ${GKI_CONFIG} || ${GKI_CONFIG} == non_gki ]]; then
			KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
				${KCONFIG_DEFCONFIG} ${FRAGMENT_CONFIG_NOGKI}
		fi

		if [[ ${UPGRADE_PROJECT} == r || ${UPGRADE_PROJECT} == R || ${UPGRADE_PROJECT} == s || ${UPGRADE_PROJECT} == S \
		   || ${UPGRADE_PROJECT} == u || ${UPGRADE_PROJECT} == U ]]; then
			KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
			${KCONFIG_DEFCONFIG} ${FRAGMENT_CONFIG_UPGRADE}
		fi
		if [[ ${UPGRADE_PROJECT} == p || ${UPGRADE_PROJECT} == P ]]; then
			KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
			${KCONFIG_DEFCONFIG} ${FRAGMENT_CONFIG_UPGRADE_P}
		fi

		if [[ ${UPGRADE_PROJECT} == r || ${UPGRADE_PROJECT} == R ]] && [[ "${CONFIG_BOOTIMAGE}" == "user" ]]; then
			KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
			${KCONFIG_DEFCONFIG} ${AMLOGIC_R_USER_DIFFCONFIG}
		fi

		if [[ -n ${DEV_CONFIGS} ]]; then
			local config_list=$(echo ${DEV_CONFIGS}|sed 's/+/ /g')
			for config_name in ${config_list[@]}
			do
				if [[ -f ${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name} ]]; then
					config_file=${ROOT_DIR}/${KERNEL_DIR}/${COMMON_DRIVERS_DIR}/arch/arm64/configs/${config_name}
					KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
					${KCONFIG_DEFCONFIG} ${config_file}
				else
					echo "ERROR: config file ${config_name} is not in the right path!!"
					exit
				fi
			done
		fi
	fi

	if [[ -n ${KASAN} ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
				 ${KCONFIG_DEFCONFIG} ${FRAGMENT_CONFIG_KASAN}
	fi

	if [[ -n ${CHECK_GKI_20} ]]; then
		KCONFIG_CONFIG=${KCONFIG_DEFCONFIG} ${MERGE_CONFIG_SCRIPT_PATH}/merge_config.sh -m -r \
				${ARM64_DEFCONFIG}
	fi

	rm ${temp_file}
	mv ${ARM64_DEFCONFIG}.tmp ${ARM64_DEFCONFIG}
}
export -f post_defconfig_cmds
POST_DEFCONFIG_CMDS=post_defconfig_cmds
