load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

tee_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
    "//common_drivers/drivers/aml_tee:tee",
]
tee_deps = [i for i in tee_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "tee",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_AMLTEE": {
            True: [
                "tee_core.c",
                "tee_shm.c",
                "tee_shm_pool.c",
                "tee_data_pipe.c",
            ],
        },
    },
    hdrs = [
    ],
    out = "tee.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
)

ddk_module(
    name = "optee",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_OPTEE": {
            True: [
                "optee/core.c",
                "optee/call.c",
                "optee/notif.c",
                "optee/rpc.c",
                "optee/supp.c",
                "optee/device.c",
                "optee/smc_abi.c",
                "optee/ffa_abi.c",
                "optee/log.c",
            ],
        },
    },
    hdrs = [
    ],
    out = "optee.ko",
    kernel_build = "//common_drivers:amlogic",
    linux_includes = [
        "optee",
    ],
    visibility = ["//visibility:public"],
    deps = tee_deps,
)
