load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

ddk_module(
    name = "aml_watermark",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_WATERMARK": {
            True: [
                "watermark.c",
            ],
        },
    },
    hdrs = [
    ],
    out = "aml_watermark.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
        deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/media:aml_media",
    ],
)
