load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select", "gki_config", "build_time", "common_drivers_release")

m_k_files()

ddk_module(
    name = "amlogic-cpuinfo",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_CPU_INFO": {
            True: [
                "cpu_info.c",
            ],
        },
    },
    hdrs = [
    ],
    linux_includes = [
    ],
    local_defines = [
        "pr_fmt(fmt)=\"[cpu_info]: \" fmt",
        "GKI_CONFIG=\"{}\"".format(gki_config),
        "BUILD_TIME=\"{}\"".format(build_time),
        "COMMON_DRIVERS_RELEASE=\"{}\"".format(common_drivers_release),
    ],
    out = "amlogic-cpuinfo.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/secmon:amlogic-secmon",
    ],
)
