load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")
load("//common_drivers:amlogic_utils.bzl", "build_project", "build_type", "gki_image")
load("//common_drivers:amlogic_utils.bzl", "gki_config", "build_time", "common_drivers_release")

m_k_files()

ddk_module(
    name = "amlogic-cpuinfo",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_CPU_INFO": {
            True: [
                "cpu_info.c",
            ],
        },
    },
    hdrs = [
    ],
    linux_includes = [
    ],
    local_defines = build_project + build_type + gki_image +
		    gki_config + build_time + common_drivers_release +
    [
        "pr_fmt(fmt)=\"[cpu_info]: \" fmt",
    ],
    out = "amlogic-cpuinfo.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
        "//common_drivers/drivers/secmon:amlogic-secmon",
    ],
)
