load("@kleaf//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")

ddk_module(
    name = "amlogic-cpufreq",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MESON_CPUFREQ": {
            True: [
                "aml_cpufreq.c",
            ],
        },
    },
    hdrs = [
        "//common_drivers:soc_headers",
        "//common:drivers/opp/opp.h",
    ],
    linux_includes = [
        "../../../common/drivers/opp",
    ],
    local_defines = ["pr_fmt(fmt)=\"[cpufreq]: \" fmt"],
    out = "amlogic-cpufreq.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
