load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:modules.bzl", "AMLOGIC_DDK_MODULES")
load("//common_drivers:amlogic_utils.bzl", "m_k_files")

m_k_files()

amlogic_cpufreq_deps0 = [
    "//common_drivers/drivers/gki_tool:amlogic-gkitool",
    "//common_drivers/drivers/debug:amlogic-debug-iotrace",
    "//common_drivers/drivers/debug:amlogic-debug",
]
amlogic_cpufreq_deps = [i for i in amlogic_cpufreq_deps0 if i in AMLOGIC_DDK_MODULES]
ddk_module(
    name = "amlogic-cpufreq",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MESON_CPUFREQ": {
            True: [
                "aml_cpufreq.c",
            ],
        },
    },
    hdrs = [
        "//common:drivers/opp/opp.h",
    ],
    linux_includes = [
        "../../../common/drivers/opp",
    ],
    local_defines = ["pr_fmt(fmt)=\"[cpufreq]: \" fmt"],
    out = "amlogic-cpufreq.ko",
    kernel_build = "//common_drivers:amlogic",
    visibility = ["//visibility:public"],
    deps = amlogic_cpufreq_deps,
)
