load("//build/kernel/kleaf:kernel.bzl", "ddk_headers", "ddk_module")
load("//common_drivers:amlogic_utils.bzl", "m_k_files", "kernel_select")

m_k_files()

ddk_module(
    name = "amlogic-cpufreq",
    srcs = glob([
        "**/*.h",
    ]),
    conditional_srcs = {
        "CONFIG_AMLOGIC_MESON_CPUFREQ": {
            True: [
                "aml_cpufreq.c",
            ],
        },
    },
    hdrs = [
        "//common:drivers/opp/opp.h",
    ],
    linux_includes = [
        "../../../common/drivers/opp",
    ],
    local_defines = ["pr_fmt(fmt)=\"[cpufreq]: \" fmt"],
    out = "amlogic-cpufreq.ko",
    kernel_build = kernel_select(),
    visibility = ["//visibility:public"],
    deps = [
        "//common_drivers/drivers/gki_tool:amlogic-gkitool",
        "//common_drivers/drivers/debug:amlogic-debug-iotrace",
        "//common_drivers/drivers/debug:amlogic-debug",
    ],
)
